--- a/service-details.html
+++ b/service-details.html
@@ -64,8 +64,8 @@
             <div class="container">
                 <div class="flex" style="flex-wrap: wrap; gap: 4rem; align-items: start;">
                     <div style="flex: 1; min-width: 300px;">
-                        <img src="https://images.unsplash.com/photo-1558494949-ef526b0042a0?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
-                            alt="Server Room" style="border-radius: 16px; box-shadow: var(--shadow);">
+                        <img src="Assets/network_infrastructure.jpg" alt="Server Room"
+                            style="border-radius: 16px; box-shadow: var(--shadow);">
                     </div>
                     <div style="flex: 1; min-width: 300px;">
                         <h2 style="font-size: 2rem; margin-bottom: 1.5rem;">Comprehensive Network Management</h2>
