--- a/services.html
+++ b/services.html
@@ -224,13 +224,188 @@
             </div>
         </section>
 
+
+        <!-- Industries We Serve -->
+        <section style="background-color: var(--bg-card);">
+            <div class="container">
+                <div class="section-title">
+                    <h2>Industries We Serve</h2>
+                    <p>Specialized solutions for your sector.</p>
+                </div>
+                <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 2rem;">
+                    <div class="card" style="display: flex; align-items: start; gap: 1rem;">
+                        <div
+                            style="min-width: 50px; height: 50px; background: rgba(79, 70, 229, 0.1); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: var(--primary); font-size: 1.5rem;">
+                            <i class='bx bxs-bank'></i>
+                        </div>
+                        <div>
+                            <h3 style="margin-bottom: 0.5rem; font-size: 1.2rem;">Finance</h3>
+                            <p style="color: var(--text-muted); font-size: 0.9rem;">Secure banking infrastructure,
+                                high-frequency trading support, and compliance management.</p>
+                        </div>
+                    </div>
+                    <div class="card" style="display: flex; align-items: start; gap: 1rem;">
+                        <div
+                            style="min-width: 50px; height: 50px; background: rgba(14, 165, 233, 0.1); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: var(--secondary); font-size: 1.5rem;">
+                            <i class='bx bxs-heart'></i>
+                        </div>
+                        <div>
+                            <h3 style="margin-bottom: 0.5rem; font-size: 1.2rem;">Healthcare</h3>
+                            <p style="color: var(--text-muted); font-size: 0.9rem;">HIPAA-compliant networks,
+                                telemedicine support, and secure patient data storage.</p>
+                        </div>
+                    </div>
+                    <div class="card" style="display: flex; align-items: start; gap: 1rem;">
+                        <div
+                            style="min-width: 50px; height: 50px; background: rgba(244, 63, 94, 0.1); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: var(--accent); font-size: 1.5rem;">
+                            <i class='bx bxs-cart'></i>
+                        </div>
+                        <div>
+                            <h3 style="margin-bottom: 0.5rem; font-size: 1.2rem;">Retail & E-commerce</h3>
+                            <p style="color: var(--text-muted); font-size: 0.9rem;">POS system management, inventory
+                                tracking networks, and 100% uptime guarantees.</p>
+                        </div>
+                    </div>
+                    <div class="card" style="display: flex; align-items: start; gap: 1rem;">
+                        <div
+                            style="min-width: 50px; height: 50px; background: rgba(16, 185, 129, 0.1); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: #10b981; font-size: 1.5rem;">
+                            <i class='bx bxs-factory'></i>
+                        </div>
+                        <div>
+                            <h3 style="margin-bottom: 0.5rem; font-size: 1.2rem;">Manufacturing</h3>
+                            <p style="color: var(--text-muted); font-size: 0.9rem;">IoT integration, supply chain
+                                management software, and industrial automation support.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Managed vs Break-Fix -->
+        <section>
+            <div class="container">
+                <div class="section-title">
+                    <h2>Managed IT vs. Break-Fix</h2>
+                    <p>Why proactive support wins every time.</p>
+                </div>
+                <div style="overflow-x: auto;">
+                    <table style="width: 100%; border-collapse: collapse; min-width: 600px;">
+                        <thead>
+                            <tr style="border-bottom: 1px solid var(--border);">
+                                <th style="text-align: left; padding: 1.5rem; color: var(--text-muted);">Feature</th>
+                                <th
+                                    style="text-align: left; padding: 1.5rem; color: var(--primary); font-size: 1.2rem;">
+                                    Managed Services</th>
+                                <th style="text-align: left; padding: 1.5rem; color: var(--text-muted);">Break-Fix</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr style="border-bottom: 1px solid var(--border);">
+                                <td style="padding: 1.5rem; font-weight: 600;">Cost</td>
+                                <td style="padding: 1.5rem; color: #10b981;">Predictable Monthly Flat Rate</td>
+                                <td style="padding: 1.5rem; color: #ef4444;">Unpredictable High Spikes</td>
+                            </tr>
+                            <tr style="border-bottom: 1px solid var(--border);">
+                                <td style="padding: 1.5rem; font-weight: 600;">Response Time</td>
+                                <td style="padding: 1.5rem; color: #10b981;">Guaranteed SLAs (Minutes)</td>
+                                <td style="padding: 1.5rem; color: #ef4444;">Best Effort (Hours/Days)</td>
+                            </tr>
+                            <tr style="border-bottom: 1px solid var(--border);">
+                                <td style="padding: 1.5rem; font-weight: 600;">approach</td>
+                                <td style="padding: 1.5rem; color: #10b981;">Proactive & Preventative</td>
+                                <td style="padding: 1.5rem; color: #ef4444;">Reactive & Emergency</td>
+                            </tr>
+                            <tr>
+                                <td style="padding: 1.5rem; font-weight: 600;">Security</td>
+                                <td style="padding: 1.5rem; color: #10b981;">Continuous Monitoring</td>
+                                <td style="padding: 1.5rem; color: #ef4444;">After-the-fact Cleanups</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </section>
+
+        <!-- Services FAQ -->
+        <section style="background-color: var(--bg-card);">
+            <div class="container">
+                <div class="section-title">
+                    <h2>Service FAQs</h2>
+                    <p>Common questions about our offerings.</p>
+                </div>
+                <!-- Reusing simple accordion style -->
+                <div class="accordion" style="max-width: 800px; margin: 0 auto;">
+                    <div class="accordion-item" style="border-bottom: 1px solid var(--border);">
+                        <button class="accordion-header"
+                            style="width: 100%; text-align: left; padding: 1.5rem 0; background: none; border: none; font-size: 1.1rem; font-weight: 600; cursor: pointer; display: flex; justify-content: space-between; align-items: center; color: var(--text-main);">
+                            <span>Do you offer 24/7 support?</span>
+                            <i class='bx bx-plus' style="color: var(--primary); font-size: 1.5rem;"></i>
+                        </button>
+                        <div class="accordion-content"
+                            style="max-height: 0; overflow: hidden; transition: max-height 0.3s ease;">
+                            <p style="padding-bottom: 1.5rem; color: var(--text-muted);">Yes, our Professional and
+                                Enterprise plans include round-the-clock monitoring and support.</p>
+                        </div>
+                    </div>
+                    <div class="accordion-item" style="border-bottom: 1px solid var(--border);">
+                        <button class="accordion-header"
+                            style="width: 100%; text-align: left; padding: 1.5rem 0; background: none; border: none; font-size: 1.1rem; font-weight: 600; cursor: pointer; display: flex; justify-content: space-between; align-items: center; color: var(--text-main);">
+                            <span>What makes IT SQUAD different?</span>
+                            <i class='bx bx-plus' style="color: var(--primary); font-size: 1.5rem;"></i>
+                        </button>
+                        <div class="accordion-content"
+                            style="max-height: 0; overflow: hidden; transition: max-height 0.3s ease;">
+                            <p style="padding-bottom: 1.5rem; color: var(--text-muted);">We focus on proactive
+                                maintenance rather than just fixing broken things. Our goal is to prevent issues before
+                                they disrupt your business.</p>
+                        </div>
+                    </div>
+                    <div class="accordion-item" style="border-bottom: 1px solid var(--border);">
+                        <button class="accordion-header"
+                            style="width: 100%; text-align: left; padding: 1.5rem 0; background: none; border: none; font-size: 1.1rem; font-weight: 600; cursor: pointer; display: flex; justify-content: space-between; align-items: center; color: var(--text-main);">
+                            <span>Can I customize my service package?</span>
+                            <i class='bx bx-plus' style="color: var(--primary); font-size: 1.5rem;"></i>
+                        </button>
+                        <div class="accordion-content"
+                            style="max-height: 0; overflow: hidden; transition: max-height 0.3s ease;">
+                            <p style="padding-bottom: 1.5rem; color: var(--text-muted);">Absolutely. We understand every
+                                business is unique. Contact us for a custom quote tailored to your specific needs.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- FAQ Script Embed -->
+            <script>
+                document.addEventListener('DOMContentLoaded', function () {
+                    const headers = document.querySelectorAll('.accordion-header');
+                    headers.forEach(header => {
+                        header.addEventListener('click', () => {
+                            const content = header.nextElementSibling;
+                            const icon = header.querySelector('i');
+                            if (content.style.maxHeight && content.style.maxHeight !== '0px') {
+                                content.style.maxHeight = '0px';
+                                icon.classList.replace('bx-minus', 'bx-plus');
+                            } else {
+                                content.style.maxHeight = content.scrollHeight + 'px';
+                                icon.classList.replace('bx-plus', 'bx-minus');
+                            }
+                        });
+                    });
+                });
+            </script>
+        </section>
+
         <!-- CTA -->
-        <section style="background: var(--gradient-hero); padding: 6rem 0;">
+        <section style="background-color: var(--primary); padding: 6rem 0;">
             <div class="container" style="text-align: center;">
-                <h2 style="margin-bottom: 1rem; font-size: 2.5rem;">Ready to upgrade your IT infrastructure?</h2>
-                <p style="margin-bottom: 2rem; color: var(--text-muted); font-size: 1.2rem;">Get in touch with us today
+                <h2 style="margin-bottom: 1rem; color: white; font-size: 2.5rem;">Ready to upgrade your IT
+                    infrastructure?</h2>
+                <p style="margin-bottom: 2rem; color: rgba(255, 255, 255, 0.9); font-size: 1.2rem;">Get in touch with us
+                    today
                     for a free network audit.</p>
-                <a href="contact.html" class="btn btn-primary" style="padding: 1rem 3rem; font-size: 1.1rem;">Contact Us
+                <a href="contact.html" class="btn btn-primary"
+                    style="background: white; color: var(--primary); padding: 1rem 3rem; font-size: 1.1rem; border: none;">Contact
+                    Us
                     Now</a>
             </div>
         </section>
