--- a/about.html
+++ b/about.html
@@ -183,62 +183,207 @@
                 </div>
             </div>
         </section>
-    </main>
 
-    <footer>
-        <div class="container">
-            <div class="footer-grid">
-                <div class="footer-col">
-                    <h3>IT SQUAD</h3>
-                    <p style="color: var(--text-muted);">Empowering businesses with top-tier IT support and
-                        infrastructure management. We provide reliable, secure, and scalable solutions for companies of
-                        all sizes.</p>
+        <!-- Leadership Team -->
+        <section style="background-color: var(--bg-card);">
+            <div class="container">
+                <div class="section-title">
+                    <h2>Our Leadership</h2>
+                    <p>Guiding our vision with decades of experience.</p>
                 </div>
-                <div class="footer-col">
-                    <h3>Quick Links</h3>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="services.html">Services</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h3>Services</h3>
-                    <ul>
-                        <li><a href="service-details.html">Help Desk</a></li>
-                        <li><a href="service-details.html">Cyber Security</a></li>
-                        <li><a href="service-details.html">Cloud Migration</a></li>
-                        <li><a href="service-details.html">Network Setup</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h3>Contact</h3>
-                    <ul>
-                        <li><i class='bx bx-map'></i> 123 Innovation Drive, Tech City, CA</li>
-                        <li><i class='bx bx-phone'></i> +1 (555) 123-4567</li>
-                        <li><i class='bx bx-envelope'></i> support@itsquad.com</li>
-                    </ul>
-                    <div style="margin-top: 1rem; display: flex; gap: 1rem;">
-                        <a href="#" style="color: var(--primary); font-size: 1.5rem;"><i
-                                class='bx bxl-facebook'></i></a>
-                        <a href="#" style="color: var(--primary); font-size: 1.5rem;"><i class='bx bxl-twitter'></i></a>
-                        <a href="#" style="color: var(--primary); font-size: 1.5rem;"><i
-                                class='bx bxl-linkedin'></i></a>
-                        <a href="#" style="color: var(--primary); font-size: 1.5rem;"><i
-                                class='bx bxl-instagram'></i></a>
+                <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 2rem;">
+                    <div class="card" style="text-align: center; padding: 2rem; display: flex; flex-direction: column;">
+                        <img src="https://ui-avatars.com/api/?name=James+Carter&background=random" alt="James Carter"
+                            style="width: 120px; height: 120px; border-radius: 50%; margin: 0 auto 1rem; object-fit: cover;">
+                        <h3 style="margin-bottom: 0.5rem;">James Carter</h3>
+                        <p style="color: var(--primary); font-weight: 600; margin-bottom: 1rem;">CEO & Founder</p>
+                        <p style="color: var(--text-muted); font-size: 0.9rem;">With over 20 years in IT infrastructure,
+                            James leads the company with a focus on innovation and customer success.</p>
+                        <div
+                            style="margin-top: auto; padding-top: 1.5rem; display: flex; justify-content: center; gap: 1rem;">
+                            <a href="#" style="color: var(--text-muted); font-size: 1.25rem;"><i
+                                    class='bx bxl-linkedin'></i></a>
+                            <a href="#" style="color: var(--text-muted); font-size: 1.25rem;"><i
+                                    class='bx bxl-twitter'></i></a>
+                        </div>
+                    </div>
+                    <div class="card" style="text-align: center; padding: 2rem; display: flex; flex-direction: column;">
+                        <img src="https://ui-avatars.com/api/?name=Elena+Rodriguez&background=random"
+                            alt="Elena Rodriguez"
+                            style="width: 120px; height: 120px; border-radius: 50%; margin: 0 auto 1rem; object-fit: cover;">
+                        <h3 style="margin-bottom: 0.5rem;">Elena Rodriguez</h3>
+                        <p style="color: var(--secondary); font-weight: 600; margin-bottom: 1rem;">Chief Operations
+                            Officer
+                        </p>
+                        <p style="color: var(--text-muted); font-size: 0.9rem;">Elena ensures our global operations run
+                            smoothly, maintaining our 99.9% uptime and service delivery standards.</p>
+                        <div
+                            style="margin-top: auto; padding-top: 1.5rem; display: flex; justify-content: center; gap: 1rem;">
+                            <a href="#" style="color: var(--text-muted); font-size: 1.25rem;"><i
+                                    class='bx bxl-linkedin'></i></a>
+                            <a href="#" style="color: var(--text-muted); font-size: 1.25rem;"><i
+                                    class='bx bxl-twitter'></i></a>
+                        </div>
+                    </div>
+                    <div class="card" style="text-align: center; padding: 2rem; display: flex; flex-direction: column;">
+                        <img src="https://ui-avatars.com/api/?name=Michael+Chang&background=random" alt="Michael Chang"
+                            style="width: 120px; height: 120px; border-radius: 50%; margin: 0 auto 1rem; object-fit: cover;">
+                        <h3 style="margin-bottom: 0.5rem;">Michael Chang</h3>
+                        <p style="color: var(--accent); font-weight: 600; margin-bottom: 1rem;">Chief Technology Officer
+                        </p>
+                        <p style="color: var(--text-muted); font-size: 0.9rem;">Michael spearheads our technical
+                            strategy, ensuring we stay ahead of the curve in cloud computing and cybersecurity.</p>
+                        <div
+                            style="margin-top: auto; padding-top: 1.5rem; display: flex; justify-content: center; gap: 1rem;">
+                            <a href="#" style="color: var(--text-muted); font-size: 1.25rem;"><i
+                                    class='bx bxl-linkedin'></i></a>
+                            <a href="#" style="color: var(--text-muted); font-size: 1.25rem;"><i
+                                    class='bx bxl-github'></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="copyright">
-                <p>&copy; 2026 IT SQUAD. All rights reserved.</p>
-            </div>
-        </div>
-    </footer>
+        </section>
 
-    <script src="main.js"></script>
-    <script src="rtltoggle.js"></script>
+        <!-- Global Presence -->
+        <section>
+            <div class="container">
+                <div class="flex" style="flex-wrap: wrap; gap: 4rem; align-items: center;">
+                    <div style="flex: 1; min-width: 300px;">
+                        <div class="section-title" style="text-align: left; margin-bottom: 1rem;">
+                            <h2>Global Presence</h2>
+                            <p>Supporting clients across time zones.</p>
+                        </div>
+                        <p style="margin-bottom: 1.5rem; color: var(--text-muted); line-height: 1.8;">
+                            From our headquarters in Silicon Valley to our regional hubs in London and Singapore, IT
+                            SQUAD operates on a global scale. This allows us to provide true 24/7/365 support, ensuring
+                            that no matter where you are, an expert is always awake and ready to help.
+                        </p>
+                        <ul class="grid" style="grid-template-columns: 1fr 1fr; gap: 1rem;">
+                            <li style="display: flex; gap: 0.5rem; align-items: center;"><i class='bx bxs-map'
+                                    style="color: var(--primary);"></i> San Francisco</li>
+                            <li style="display: flex; gap: 0.5rem; align-items: center;"><i class='bx bxs-map'
+                                    style="color: var(--primary);"></i> New York</li>
+                            <li style="display: flex; gap: 0.5rem; align-items: center;"><i class='bx bxs-map'
+                                    style="color: var(--primary);"></i> London</li>
+                            <li style="display: flex; gap: 0.5rem; align-items: center;"><i class='bx bxs-map'
+                                    style="color: var(--primary);"></i> Singapore</li>
+                            <li style="display: flex; gap: 0.5rem; align-items: center;"><i class='bx bxs-map'
+                                    style="color: var(--primary);"></i> Sydney</li>
+                            <li style="display: flex; gap: 0.5rem; align-items: center;"><i class='bx bxs-map'
+                                    style="color: var(--primary);"></i> Dubai</li>
+                        </ul>
+                    </div>
+                    <div style="flex: 1; min-width: 300px;">
+                        <img src="https://images.unsplash.com/photo-1526778548025-fa2f459cd5c1?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
+                            alt="Global Map" style="border-radius: 16px; box-shadow: var(--shadow);">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Awards & Recognition -->
+        <section style="background-color: var(--bg-card); padding-bottom: 6rem;">
+            <div class="container" style="text-align: center;">
+                <div class="section-title">
+                    <h2>Awards & Recognition</h2>
+                    <p>Our commitment to excellence hasn't gone unnoticed.</p>
+                </div>
+                <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 2rem;">
+                    <div style="padding: 2rem; border: 1px dashed var(--border); border-radius: 12px;">
+                        <i class='bx bxs-trophy' style="font-size: 3rem; color: #FFD700; margin-bottom: 1rem;"></i>
+                        <h3>Best IT Support</h3>
+                        <p style="font-size: 0.9rem; color: var(--text-muted);">TechReview 2024</p>
+                    </div>
+                    <div style="padding: 2rem; border: 1px dashed var(--border); border-radius: 12px;">
+                        <i class='bx bxs-medal' style="font-size: 3rem; color: #C0C0C0; margin-bottom: 1rem;"></i>
+                        <h3>Top Cloud Provider</h3>
+                        <p style="font-size: 0.9rem; color: var(--text-muted);">CloudWorld 2023</p>
+                    </div>
+                    <div style="padding: 2rem; border: 1px dashed var(--border); border-radius: 12px;">
+                        <i class='bx bxs-star' style="font-size: 3rem; color: #CD7F32; margin-bottom: 1rem;"></i>
+                        <h3>Customer Choice</h3>
+                        <p style="font-size: 0.9rem; color: var(--text-muted);">G2 Crowd 2025</p>
+                    </div>
+                    <div style="padding: 2rem; border: 1px dashed var(--border); border-radius: 12px;">
+                        <i class='bx bxs-check-shield'
+                            style="font-size: 3rem; color: var(--primary); margin-bottom: 1rem;"></i>
+                        <h3>Security Leader</h3>
+                        <p style="font-size: 0.9rem; color: var(--text-muted);">CyberSec Awards</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- CTA -->
+        <section style="background-color: var(--primary); padding: 6rem 0;">
+            <div class="container" style="text-align: center;">
+                <h2 style="margin-bottom: 1rem; color: white; font-size: 2.5rem;">Join Our Growing Family</h2>
+                <p style="margin-bottom: 2rem; color: rgba(255,255,255,0.8); font-size: 1.2rem;">Experience the
+                    difference
+                    of working with a team that truly cares about your success.</p>
+                <a href="contact.html" class="btn btn-primary"
+                    style="background: white; color: var(--primary); padding: 1rem 3rem; font-size: 1.1rem; border: none;">Get
+                    Started Today</a>
+            </div>
+        </section>
+
+        <footer>
+            <div class="container">
+                <div class="footer-grid">
+                    <div class="footer-col">
+                        <h3>IT SQUAD</h3>
+                        <p style="color: var(--text-muted);">Empowering businesses with top-tier IT support and
+                            infrastructure management. We provide reliable, secure, and scalable solutions for companies
+                            of
+                            all sizes.</p>
+                    </div>
+                    <div class="footer-col">
+                        <h3>Quick Links</h3>
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="about.html">About Us</a></li>
+                            <li><a href="services.html">Services</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="blog.html">Blog</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-col">
+                        <h3>Services</h3>
+                        <ul>
+                            <li><a href="service-details.html">Help Desk</a></li>
+                            <li><a href="service-details.html">Cyber Security</a></li>
+                            <li><a href="service-details.html">Cloud Migration</a></li>
+                            <li><a href="service-details.html">Network Setup</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-col">
+                        <h3>Contact</h3>
+                        <ul>
+                            <li><i class='bx bx-map'></i> 123 Innovation Drive, Tech City, CA</li>
+                            <li><i class='bx bx-phone'></i> +1 (555) 123-4567</li>
+                            <li><i class='bx bx-envelope'></i> support@itsquad.com</li>
+                        </ul>
+                        <div style="margin-top: 1rem; display: flex; gap: 1rem;">
+                            <a href="#" style="color: var(--primary); font-size: 1.5rem;"><i
+                                    class='bx bxl-facebook'></i></a>
+                            <a href="#" style="color: var(--primary); font-size: 1.5rem;"><i
+                                    class='bx bxl-twitter'></i></a>
+                            <a href="#" style="color: var(--primary); font-size: 1.5rem;"><i
+                                    class='bx bxl-linkedin'></i></a>
+                            <a href="#" style="color: var(--primary); font-size: 1.5rem;"><i
+                                    class='bx bxl-instagram'></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="copyright">
+                    <p>&copy; 2026 IT SQUAD. All rights reserved.</p>
+                </div>
+            </div>
+        </footer>
+
+        <script src="main.js"></script>
+        <script src="rtltoggle.js"></script>
 </body>
 
 </html>
