--- a/contact.html
+++ b/contact.html
@@ -113,10 +113,10 @@
         <section>
             <div class="container">
                 <div class="grid animate-fade-up delay-200"
-                    style="grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 4rem;">
+                    style="grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 2rem;">
 
                     <div>
-                        <div class="section-title" style="text-align: left;">
+                        <div class="section-title">
                             <h2>Points of Contact</h2>
                             <p>Have a technical issue? Fill out the form or drop by our office.</p>
                         </div>
@@ -147,7 +147,7 @@
                                 </div>
                                 <div>
                                     <h4>Call Us</h4>
-                                    <p style="color: var(--text-muted);">+1 (555) 123-4567</p>
+                                    <p style="color: var(--text-muted);" class="phone-number">+1 (555) 123-4567</p>
                                 </div>
                             </div>
                         </div>
