--- a/about.html
+++ b/about.html
@@ -79,11 +79,11 @@
 
                         <div class="grid" style="grid-template-columns: 1fr 1fr; gap: 1rem;">
                             <div class="card" style="padding: 1rem;">
-                                <h3 style="color: var(--primary);">50+</h3>
+                                <h3 style="color: var(--primary);" class="stat-number" data-target="50">0+</h3>
                                 <p style="font-size: 0.9rem;">Experts</p>
                             </div>
                             <div class="card" style="padding: 1rem;">
-                                <h3 style="color: var(--primary);">10k+</h3>
+                                <h3 style="color: var(--primary);" class="stat-number" data-target="10">0k+</h3>
                                 <p style="font-size: 0.9rem;">Tickets Solved</p>
                             </div>
                         </div>
