--- a/index2.html
+++ b/index2.html
@@ -302,6 +302,28 @@
         </section>
 
         <!-- Trusted Partners -->
+        <section>
+            <div class="container">
+                <div class="section-title">
+                    <h2>Trusted By Leading Companies</h2>
+                    <p>Partnering with industry leaders to deliver excellence.</p>
+                </div>
+                <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 2rem; align-items: center;">
+                    <div style="text-align: center;">
+                        <img src="Assets/logo_techcorp.jpg" alt="TechCorp" style="max-width: 150px; height: auto;">
+                    </div>
+                    <div style="text-align: center;">
+                        <img src="Assets/logo_cyberguard.jpg" alt="CyberGuard" style="max-width: 150px; height: auto;">
+                    </div>
+                    <div style="text-align: center;">
+                        <img src="Assets/logo_netflow.jpg" alt="NetFlow" style="max-width: 150px; height: auto;">
+                    </div>
+                    <div style="text-align: center;">
+                        <img src="Assets/logo_clouddyna.jpg" alt="CloudDyna" style="max-width: 150px; height: auto;">
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!-- Process Timeline -->
         <section style="background-color: var(--bg-card);">
