--- a/services.html
+++ b/services.html
@@ -281,6 +281,76 @@
             </div>
         </section>
 
+        <!-- Service Showcase with Image -->
+        <section style="background-color: var(--bg-card);">
+            <div class="container">
+                <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 3rem; align-items: center;">
+                    <div>
+                        <div class="section-title" style="text-align: left;">
+                            <h2>Comprehensive IT Support</h2>
+                            <p>Our full-suite IT support services ensure your business runs smoothly 24/7.</p>
+                        </div>
+                        <ul style="list-style: none; margin: 2rem 0;">
+                            <li style="margin: 1rem 0; display: flex; align-items: center; gap: 1rem;">
+                                <i class='bx bx-check-circle' style="font-size: 1.5rem; color: #10b981;"></i>
+                                <span>Round-the-clock monitoring</span>
+                            </li>
+                            <li style="margin: 1rem 0; display: flex; align-items: center; gap: 1rem;">
+                                <i class='bx bx-check-circle' style="font-size: 1.5rem; color: #10b981;"></i>
+                                <span>Expert technical support</span>
+                            </li>
+                            <li style="margin: 1rem 0; display: flex; align-items: center; gap: 1rem;">
+                                <i class='bx bx-check-circle' style="font-size: 1.5rem; color: #10b981;"></i>
+                                <span>Proactive maintenance</span>
+                            </li>
+                            <li style="margin: 1rem 0; display: flex; align-items: center; gap: 1rem;">
+                                <i class='bx bx-check-circle' style="font-size: 1.5rem; color: #10b981;"></i>
+                                <span>Security and compliance</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <img src="Assets/it-support-services.jpg" alt="IT Support Services" style="width: 100%; border-radius: 12px; box-shadow: 0 10px 30px rgba(0,0,0,0.1);">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Network Infrastructure Section -->
+        <section>
+            <div class="container">
+                <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 3rem; align-items: center;">
+                    <div>
+                        <img src="Assets/network_infrastructure.jpg" alt="Network Infrastructure" style="width: 100%; border-radius: 12px; box-shadow: 0 10px 30px rgba(0,0,0,0.1);">
+                    </div>
+                    <div>
+                        <div class="section-title" style="text-align: left;">
+                            <h2>Enterprise Network Solutions</h2>
+                            <p>Build a resilient, scalable network infrastructure for your organization.</p>
+                        </div>
+                        <ul style="list-style: none; margin: 2rem 0;">
+                            <li style="margin: 1rem 0; display: flex; align-items: center; gap: 1rem;">
+                                <i class='bx bx-check-circle' style="font-size: 1.5rem; color: var(--primary);"></i>
+                                <span>Secure network design</span>
+                            </li>
+                            <li style="margin: 1rem 0; display: flex; align-items: center; gap: 1rem;">
+                                <i class='bx bx-check-circle' style="font-size: 1.5rem; color: var(--primary);"></i>
+                                <span>Infrastructure optimization</span>
+                            </li>
+                            <li style="margin: 1rem 0; display: flex; align-items: center; gap: 1rem;">
+                                <i class='bx bx-check-circle' style="font-size: 1.5rem; color: var(--primary);"></i>
+                                <span>Network maintenance and upgrades</span>
+                            </li>
+                            <li style="margin: 1rem 0; display: flex; align-items: center; gap: 1rem;">
+                                <i class='bx bx-check-circle' style="font-size: 1.5rem; color: var(--primary);"></i>
+                                <span>High availability solutions</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Managed vs Break-Fix -->
         <section>
             <div class="container">
