--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -65,8 +65,6 @@
             </nav>
             <div class="user-profile flex items-center gap-1">
                 <span>Admin User</span>
-                <img src="https://ui-avatars.com/api/?name=Admin+User&background=F43F5E&color=fff" alt="User"
-                    style="width: 32px; height: 32px; border-radius: 50%;">
             </div>
             <div class="controls" style="display: flex; gap: 0.5rem; align-items: center;">
                 <button id="rtl-toggle" class="btn-icon-animate" title="RTL Toggle"><i class='bx bx-globe'></i></button>
@@ -222,7 +220,21 @@
                                 height: 280,
                                 type: 'area', // Changed to area for variety
                                 toolbar: { show: false },
-                                fontFamily: 'var(--font-main)'
+                                fontFamily: 'var(--font-main)',
+                                events: {
+                                    mouseMove: function(event, chartContext, config) {
+                                        if (config.dataPointIndex !== -1) {
+                                            chartContext.updateOptions({
+                                                dataLabels: { enabled: true }
+                                            }, false, false);
+                                        }
+                                    },
+                                    mouseLeave: function(event, chartContext, config) {
+                                        chartContext.updateOptions({
+                                            dataLabels: { enabled: false }
+                                        }, false, false);
+                                    }
+                                }
                             },
                             colors: ['#F43F5E', '#F59E0B'],
                             dataLabels: { enabled: false },
@@ -259,7 +271,21 @@
                                 type: 'bar',
                                 height: 280,
                                 fontFamily: 'var(--font-main)',
-                                toolbar: { show: false }
+                                toolbar: { show: false },
+                                events: {
+                                    mouseMove: function(event, chartContext, config) {
+                                        if (config.dataPointIndex !== -1) {
+                                            chartContext.updateOptions({
+                                                dataLabels: { enabled: true }
+                                            }, false, false);
+                                        }
+                                    },
+                                    mouseLeave: function(event, chartContext, config) {
+                                        chartContext.updateOptions({
+                                            dataLabels: { enabled: false }
+                                        }, false, false);
+                                    }
+                                }
                             },
                             plotOptions: {
                                 bar: {
@@ -302,7 +328,21 @@
                                 type: 'line',
                                 height: 280,
                                 fontFamily: 'var(--font-main)',
-                                toolbar: { show: false }
+                                toolbar: { show: false },
+                                events: {
+                                    mouseMove: function(event, chartContext, config) {
+                                        if (config.dataPointIndex !== -1) {
+                                            chartContext.updateOptions({
+                                                dataLabels: { enabled: true }
+                                            }, false, false);
+                                        }
+                                    },
+                                    mouseLeave: function(event, chartContext, config) {
+                                        chartContext.updateOptions({
+                                            dataLabels: { enabled: false }
+                                        }, false, false);
+                                    }
+                                }
                             },
                             colors: ['#F59E0B', '#EF4444'],
                             stroke: { curve: 'smooth', width: [2, 2] },
@@ -333,10 +373,25 @@
                                 height: 280,
                                 fontFamily: 'var(--font-main)',
                                 toolbar: { show: false },
-                                animations: { enabled: true, easing: 'linear', dynamicAnimation: { speed: 1000 } }
+                                animations: { enabled: true, easing: 'linear', dynamicAnimation: { speed: 1000 } },
+                                events: {
+                                    mouseMove: function(event, chartContext, config) {
+                                        if (config.dataPointIndex !== -1) {
+                                            chartContext.updateOptions({
+                                                dataLabels: { enabled: true }
+                                            }, false, false);
+                                        }
+                                    },
+                                    mouseLeave: function(event, chartContext, config) {
+                                        chartContext.updateOptions({
+                                            dataLabels: { enabled: false }
+                                        }, false, false);
+                                    }
+                                }
                             },
                             colors: ['#10B981'],
                             stroke: { curve: 'smooth', width: 2 },
+                            dataLabels: { enabled: false },
                             xaxis: {
                                 categories: ['0s', '5s', '10s', '15s', '20s', '25s', '30s', '35s', '40s', '45s', '50s', '55s'],
                                 labels: { style: { colors: 'var(--text-muted)' } },
@@ -368,6 +423,20 @@
                                 fontFamily: 'var(--font-main)',
                                 toolbar: { show: false },
                                 stacked: true,
+                                events: {
+                                    mouseMove: function(event, chartContext, config) {
+                                        if (config.dataPointIndex !== -1) {
+                                            chartContext.updateOptions({
+                                                dataLabels: { enabled: true }
+                                            }, false, false);
+                                        }
+                                    },
+                                    mouseLeave: function(event, chartContext, config) {
+                                        chartContext.updateOptions({
+                                            dataLabels: { enabled: false }
+                                        }, false, false);
+                                    }
+                                }
                             },
                             colors: ['#06B6D4', '#3B82F6'],
                             plotOptions: {
